[gd_scene load_steps=7 format=3 uid="uid://dtp210cnoeupt"]

[ext_resource type="Script" path="res://Scripts/PathLine.gd" id="1_vpacy"]
[ext_resource type="Texture2D" uid="uid://7xqep5m2ynp" path="res://Assets/68362641-apartment-floor-plan-blueprint-top-view-basic-room-of-home-vector-illustration.jpg" id="2_c1ce3"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="3_iu2pj"]
[ext_resource type="Script" path="res://Scripts/TeamManager.gd" id="4_g8e12"]
[ext_resource type="PackedScene" uid="uid://dco3oj5xcqatv" path="res://Scenes/LinePath/ui_overlay.tscn" id="5_vpeme"]
[ext_resource type="Script" path="res://Scripts/ConfrontationOverlay.gd" id="6_vplye"]

[node name="WhiteRoom" type="Node2D"]
script = ExtResource("1_vpacy")

[node name="Background" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(589.5, 382)
scale = Vector2(0.879231, 0.536923)
texture = ExtResource("2_c1ce3")

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("3_iu2pj")

[node name="TeamManager" type="Node2D" parent="GameManager"]
script = ExtResource("4_g8e12")

[node name="PathLine" type="Line2D" parent="GameManager"]
points = PackedVector2Array(10, 2)

[node name="UIOverlay" parent="." instance=ExtResource("5_vpeme")]

[node name="ConfrontationOverlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_vplye")

[node name="ColorRect" type="ColorRect" parent="ConfrontationOverlay"]
layout_mode = 0
offset_right = 1163.0
offset_bottom = 730.0
color = Color(0.629675, 0.629675, 0.629675, 1)
